# notebook_watcher

./: .gitignore  README.md  pyproject.toml
notebook_watcher/: __init__.py  cli.py  core.py
