[project]
name = "notebook-watcher"
version = "0.1.0"
description = "一个用于监控和提取Jupyter Notebook中proto代码的工具"
authors = [
    {name = "wjie", email = "wjiexu39@gmail.com"}
]
dependencies = [
    "watchdog>=2.1.0",
    "loguru>=0.7.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
notebook-watcher = "notebook_watcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebook_watcher"] 